objects/MPWReservationCloseReminder__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for setting email address for Reservation Close Reminder settings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Address_1__c</fullName>
        <label>To Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC_Address_2__c</fullName>
        <label>To Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC_Address_3__c</fullName>
        <label>To Address 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <label>ToAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MPW Reservation Close Reminder</label>
</CustomObject>